# Cricnews-bot

./: .gitignore  Readme.md  main.py  pyproject.toml  requirements.txt
app/: config.py  logger.py
app/services/: cricket_service.py  llm_service.py
ui/: streamlit_app.py
